<resources>
    <string name="app_name">Demo Android</string>
    <string name="click_me_btn">Click Me</string>
    <string name="content_text">Hello, my name is....</string>
    <string name="hint_text">Enter your name</string>
    <string name="next_btn">Next</string>
    <string name="stop_foreground_btn">Stop Foreground</string>
    <string name="start_foreground_btn">Start Foreground</string>
    <string name="start_background_btn">Start Background</string>
    <string name="view_btn">View</string>
    <string name="hello_txt">Hello</string>
    <string name="data_text">Data</string>
    <string name="get_text_and_back_btn">Get text and back</string>
    <string name="image_txt">Image Base Demo</string>
    <string name="feature_name_txt">Feature Name</string>
    <string name="text_sample">Text sample for ScrollView</string>
    <string name="time_default">00:00</string>
    <string name="title_noti">Counting down</string>
    <string name="enter_seconds">enter seconds</string>
    <string name="tv_parsejson">ParseJSON</string>
    <string name="json_parser">JSON Parser</string>
    <string name="format_json">Format Json</string>
    <string name="data_read_from_file_txt">Data read from file</string>
    <string name="cut_file_sequentially_btn">Cut File Sequentially</string>
    <string name="cut_file_non_sequentially_btn">Cut File Non-Sequentially</string>
    <string name="path_file_output">Path file output:</string>
</resources>