<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.HandleFileActivity"
        android:gravity="center"
        android:padding="24dp"
        android:orientation="vertical">
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp">
    <TextView
            android:id="@+id/log_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_read_from_file_txt"
            android:padding="8dp"
            android:background="#E0E0E0"
            android:textSize="16sp" />
</ScrollView>


    <TextView
            android:id="@+id/path_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/path_file_output"
            android:padding="8dp"
            android:textSize="16sp" />
    <Button
            android:id="@+id/button_sequential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cut_file_sequentially_btn" />

    <Button
            android:id="@+id/button_non_sequential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cut_file_non_sequentially_btn"
            android:layout_marginTop="8dp" />

</LinearLayout>

