<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        tools:context=".activities.ParseJsonActivity">

    <TextView
            android:id="@+id/text_view_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tv_parsejson"
            android:padding="10dp"
            android:textSize="16sp"/>

    <Button
            android:id="@+id/button_json_parser"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/json_parser"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
    />
    <Button
            android:id="@+id/button_format_json"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/format_json"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:enabled = "false"
    />
</LinearLayout>