<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity = "center"
        android:padding="24dp"
        android:orientation="vertical"
        tools:context=".activities.ForegroundServiceActivity">


    <EditText
            android:id="@+id/edit_seconds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_seconds"
            android:inputType="number"
            android:background="@drawable/cus_edit_text"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""/>
    <Button
            android:id="@+id/button_start"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/start_foreground_btn"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
    />
    <Button
            android:id="@+id/button_stop"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/stop_foreground_btn"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
    />



</LinearLayout>